<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.homeworktwo.MainActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe"
        android:id="@+id/tic_tac_toe"
        android:layout_marginTop="112dp"
        android:background="@drawable/custom_button"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sofbus"
        android:id="@+id/taskTwoButton"
        android:layout_marginTop="95dp"
        android:layout_below="@+id/tic_tac_toe"
        android:layout_toLeftOf="@+id/tic_tac_toe"
        android:layout_toStartOf="@+id/tic_tac_toe"
        android:background="@drawable/custom_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify"
        android:id="@+id/spotify"
        android:layout_alignTop="@+id/taskTwoButton"
        android:layout_toRightOf="@+id/tic_tac_toe"
        android:layout_toEndOf="@+id/tic_tac_toe"
        android:background="@drawable/custom_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/homework_two"
        android:textSize="40sp"
        android:id="@+id/textView5"
        android:layout_marginTop="53dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
